# hecatonquiros_ual

./: README.md
grvc-ual/: README.md
grvc-ual/arm_description/: CMakeLists.txt
grvc-ual/arm_description/launch/: heca_positioner_controllers.launch  heca_positioner_gripper_controllers.launch
grvc-ual/arm_description/models/aeroarms_hecatonquiros_collision/: arm.transmission.xacro  geometry.xacro  model.gazebo  model.xacro
grvc-ual/arm_description/models/aeroarms_hecatonquiros_collision/config/: arms_control.yaml
grvc-ual/arm_description/models/aeroarms_hecatonquiros_positioner/: arm.transmission.xacro  geometry.xacro  model.gazebo  model.xacro
grvc-ual/arm_description/models/aeroarms_hecatonquiros_positioner/config/: arms_control.yaml
grvc-ual/arm_description/models/aeroarms_hecatonquiros_positioner_gripper/: arm.transmission.xacro  geometry.xacro  model.gazebo  model.xacro
grvc-ual/arm_description/models/aeroarms_hecatonquiros_positioner_gripper/config/: arms_control.yaml
grvc-ual/arm_description/rviz/: arm_description_config.rviz
grvc-ual/arm_description/urdf/: collision.xacro  component_snippets.xacro  multirotor_base.xacro  positioner.urdf  positioner.xacro  positioner_gripper.xacro
grvc-ual/heca_plugins/: CMakeLists.txt  package.xml
grvc-ual/heca_plugins/src/: Set_activation_client.cpp  Set_autoposition_client.cpp  Set_position_client.cpp  int_client.cpp  int_server.cpp  positioner_plugin.cpp
grvc-ual/pid/: CMakeLists.txt  package.xml
grvc-ual/pid/src/: PID.cpp  PID.h  alex.cpp  docker_pid.cpp  main.cpp  receptor_PID.cpp  ual_pid.cpp
grvc-ual/px4_bringup/config/: empty_light.world  empty_light_hecatonquiros.world  simulation_params.yaml
grvc-ual/px4_bringup/launch/: spawn_robot.launch  test_simulate.launch
grvc-ual/px4_bringup/scripts/: launch_gzworld.py
grvc-ual/robots_description/launch/: visualize.launch
grvc-ual/robots_description/models/aeroarms_hecatonquiros_positioner_gripper/: arm.transmission.xacro
grvc-ual/robots_description/models/aeroarms_hecatonquiros_positioner_gripper/config/: arms_control.yaml
grvc-ual/tsp_mtsp/: CMakeLists.txt  README  datos.txt  package.xml  tsp_datos.txt  useless.txt
grvc-ual/tsp_mtsp/launch/: tal.launch
grvc-ual/tsp_mtsp/src/: mtsp_script_1.cpp  points_and_lines.cpp  points_and_lines_2.cpp  points_and_lines_3.cpp  points_and_lines_4.cpp  points_and_lines_5.cpp  points_and_lines_6.cpp  pos.txt  test_ual_interfaces_mtsp.cpp  tsp_clases.cpp  tsp_script.cpp  tsp_script_start.cpp  tsp_script_start_2.cpp  tsp_script_sucio.cpp  tsp_start_limpio.cpp
grvc-ual/tsp_mtsp/src/mtsp_files/: funcion_mtsp_file.cpp  funcion_mtsp_file.h
grvc-ual/tsp_mtsp/src/mtsp_files/clases/: algth_mtsp.h  cabecera_esultimo.cpp  cabecera_esultimo.h  des_nodo.cpp  desglosa_hijo.cpp  desglosa_hijo.h  funciones.cpp  funciones.h  matriz_c.cpp  matriz_c.h  nodo_c.cpp  nodo_c.h  structure_bal.h
grvc-ual/uav_abstraction_layer/launch/: test_server.launch
